--- a/website/static/index.html
+++ b/website/static/index.html
@@ -7,7 +7,7 @@
   <script type="text/javascript">
     window.location.href = 'docs/doc1.html';
   </script>
-  <title>Check Yo Self CLI</title>
+  <title>Write Good Component Docs</title>
 </head>
 
 <body>
